--- a/templates/home/about.html
+++ b/templates/home/about.html
@@ -2,7 +2,7 @@
 {% set active_page = "about" %}
 {% set has_splash = "true" %}
 {% set title = "About" %}
-{% set description = "Find out about the LibCrowds platform, which hosts experimental crowdsourcing projects from the British Library." %}
+{% set description = "Find out more about the LibCrowds crowdsourcing platform." %}
 
 {% block content %}
     {% include ['custom/_about.html', 'home/_about.html'] ignore missing %}
