--- a/templates/projects/snippets/convert_a_card.html
+++ b/templates/projects/snippets/convert_a_card.html
@@ -34,7 +34,7 @@
          </div>
          <div id="finish" class="alert alert-success remove-margin-bottom" style="display:none;">
             <strong id="i18n_congratulations">Congratulations!</strong> <span id="i18n_congratulations_text">You have participated in all available tasks!</span>
-            <br/>
+            <br>
             <div class="alert-actions">
                <a class="btn btn-small" href="/">Go Home</a>
                <a class="btn btn-small" href="/project">or, Check other projects</a>
@@ -62,7 +62,7 @@
 	    <!-- The question will be loaded here -->
          </div>
          <div class="col-md-4 hidden-xs hidden-sm">
-            <a href="#" class="btn btn-inverse pull-right" data-toggle="modal" data-target="#modal"><i class="fa fa-book"></i> Tutorial</a><br/>
+            <a href="#" class="btn btn-inverse pull-right" data-toggle="modal" data-target="#modal"><i class="fa fa-book"></i> Tutorial</a><br>
             <a href="#comments" id="comments_btn" class="btn btn-inverse pull-right" data-toggle="collapse" aria-expanded="false" aria-controls="comments">
             <i class="fa fa-plus"></i> Comment</a>
          </div>
