--- a/templates/_navbar.html
+++ b/templates/_navbar.html
@@ -2,7 +2,7 @@
     <div class="container">
         <div class="navbar-header">
             <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-                <span class="fa fa-bars fa-2x"></span>
+                <span class="fa fa-bars"></span>
             </button>
 
             <!-- Set logo -->
