--- a/templates/account/_helpers.html
+++ b/templates/account/_helpers.html
@@ -9,59 +9,34 @@
         <h1 class="inset-text-grey">{{user.fullname}}</h1>
     </div>
     <div class="col-sm-6 col-sm-offset-0 col-xs-10 col-xs-offset-1 white-panel inset-shadow">
-
         <div class="row">
             <div class="col-xs-6 text-center">
-                {% if user.rank %}
-                    {% if private %}
-                    <a class="remove-colour" href="{{url_for('leaderboard.index')}}">
-                    {% endif %}
-                    <i class="fa fa-trophy fa-4x"></i>
-                    <p>Rank</p>
-                    <p class="score">{{ user.rank }}</p>
-                {% if private %}</a>{% endif %}
-                {% else %}
-                    <i class="fa fa-trophy fa-4x"></i>
-                    <p>Rank</p>
-                    <p class="score">0</p>
-                {% endif %}
+                <i class="fa fa-trophy fa-4x"></i>
+                <p>Rank</p>
+                <p class="score">{% if user.rank %}{{ user.rank }}{% else %}Unranked{% endif %}</p>
             </div>
 
             <div class="col-xs-6 text-center">
-                {% if user.score %}
-                    <i class="fa fa-tasks fa-4x"></i>
-                    <p>Contributions</p>
-                    <p class="score">{{user.score}}</p>
-                {% else %}
-                    <i class="fa fa-tasks fa-4x"></i>
-                    <p>Contributions</p>
-                    <p class="score">0</p>
-                {% endif %}
+                <i class="fa fa-tasks fa-4x"></i>
+                <p>Contributions</p>
+                <p class="score">{% if user.score %}{{user.score}}{% else %}0{% endif %}</p>
             </div>
         </div>
         <hr class="extra-margins">
-
         <div class="col-sm-10 col-sm-offset-1 user-info">
             <p><i class="fa fa-user"></i> Username: {{ user.name }}</p>
-            {% if private %}
-                <p><i class="fa fa-envelope"></i> E-mail: {{ user.email_addr }}</p>
-            {% endif %}
-
-
-
-
             <p><i class="fa fa-clock-o"></i> Joined: {{user.created[8:10]}}-{{user.created[5:7]}}-{{user.created[0:4]}}</p>
             {% if private %}
-
+                <p><i class="fa fa-envelope"></i> E-mail: {{ user.email_addr }}</p>
                 <div class="text-center">
                     <a href="{{ url_for('account.update_profile', name=user.name) }}" class="btn btn-default btn-sm btn-padded"><i class="fa fa-pencil-square-o"></i> Edit</a>
                     {% if (user.valid_email == False) %}
-                      {% if (user.confirmation_email_sent == False) %}
-                      <a href="{{ url_for('account.confirm_email')}}" class="btn btn-danger">Validate email</a>
-                      {% else %}
-                        <br />
+                        {% if (user.confirmation_email_sent == False) %}
+                        <a href="{{ url_for('account.confirm_email')}}" class="btn btn-danger">Validate email</a>
+                        {% else %}
+                        <br>
                         <p class="label label-danger">Email sent for validation</p>
-                      {% endif %}
+                        {% endif %}
                     {% endif %}
                 </div>
             {% endif %}
@@ -83,34 +58,33 @@
 {% endmacro %}
 
 {% macro render_pagination(pagination) %}
-  <div class="pagination pagination-centered">
-      <ul>
-        {% if pagination.has_prev %}
-          <li>
-          <a href="{{ url_for_other_page(pagination.page - 1)
-            }}">&laquo; Prev | </a>
-          </li>
-        {% endif %}
-
-        {%- for page in pagination.iter_pages() %}
-          {% if page %}
-            {% if page != pagination.page %}
+    <div class="pagination pagination-centered">
+        <ul>
+            {% if pagination.has_prev %}
             <li>
-              <a href="{{ url_for_other_page(page) }}">{{ page }}</a>
-             </li>
-            {% else %}
-            <li class="active">
-                <a href="#">{{ page }}</a>
+                <a href="{{ url_for_other_page(pagination.page - 1)}}">&laquo; Prev | </a>
             </li>
             {% endif %}
-          {% endif %}
-        {%- endfor %}
-        {% if pagination.has_next %}
-          <li>
-          <a href="{{ url_for_other_page(pagination.page + 1)
-            }}"> | Next &raquo;</a>
-          </li>
-        {% endif %}
-    </ul>
-  </div>
+
+            {% for page in pagination.iter_pages() %}
+                {% if page %}
+                    {% if page != pagination.page %}
+                    <li>
+                        <a href="{{ url_for_other_page(page) }}">{{ page }}</a>
+                    </li>
+                    {% else %}
+                    <li class="active">
+                        <a href="#">{{ page }}</a>
+                    </li>
+                    {% endif %}
+                {% endif %}
+            {% endfor %}
+
+            {% if pagination.has_next %}
+            <li>
+                <a href="{{ url_for_other_page(pagination.page + 1)}}"> | Next &raquo;</a>
+            </li>
+            {% endif %}
+        </ul>
+    </div>
 {% endmacro %}
