--- a/templates/admin/categories.html
+++ b/templates/admin/categories.html
@@ -3,7 +3,7 @@
 {% from "admin/_helpers.html" import render_local_nav %}
 
 {% block content %}
-    {{ render_local_nav(current_user, "categories") }}
+{{ render_local_nav(current_user, "categories") }}
 <div class="container-padded">
     <div class="container container-padded">
         <div class="row">
@@ -40,23 +40,25 @@
                             <th style="text-align:center;">Actions</th>
                         </tr>
                     </thead>
-                {% for c in categories %}
+                    {% for c in categories %}
                     <tr>
                         <td>{{c.name}}</td>
                         <td style="text-align:center;">{{ n_projects_per_category[c.short_name]}}</td>
-                        <td style="text-align:center;"><div class="btn-group">
-                            <a href="{{url_for('admin.update_category', id=c.id)}}" class="btn"><i class="fa fa-edit"></i> Edit Category</a>
-                            {% if n_projects_per_category[c.short_name] == 0 and (categories | count > 1) %}
-                            <a href="{{url_for('admin.del_category', id=c.id)}}" class="btn"><i class="fa fa-trash"></i> Delete Category</a>
-                            {% else %}
-                            <a href="#" class="btn disabled"><i class="fa fa-trash"></i> Delete Category</a>
-                            {% endif %}
-                        </div></td>
+                        <td style="text-align:center;">
+                            <div class="btn-group">
+                                <a href="{{url_for('admin.update_category', id=c.id)}}" class="btn"><i class="fa fa-edit"></i> Edit Category</a>
+                                {% if n_projects_per_category[c.short_name] == 0 and (categories | count > 1) %}
+                                <a href="{{url_for('admin.del_category', id=c.id)}}" class="btn"><i class="fa fa-trash"></i> Delete Category</a>
+                                {% else %}
+                                <a href="#" class="btn disabled"><i class="fa fa-trash"></i> Delete Category</a>
+                                {% endif %}
+                            </div>
+                        </td>
                     </tr>
-                {% if not loop.last %}
-                {% endif %}
-            {% endfor %}
-            </table>
+                        {% if not loop.last %}
+                        {% endif %}
+                    {% endfor %}
+                </table>
                 {% endif %}
             </div>
         </div>
