--- a/templates/help/api.html
+++ b/templates/help/api.html
@@ -5,94 +5,67 @@
 {% if not project_id %}
 {% set project_id=1 %}
 {% endif %}
-    <div class="container-padded">
-        <div class="container container-padded">
+<div class="container-padded">
+    <div class="container container-padded">
         <div class="row">
             <div class="col-sm-12">
                 {% include "_flash_messages.html" %}
-                <h1><strong>{{brand}}</strong>: API Help</h1>
-                <p>{{brand}} has a <a href="http://en.wikipedia.org/wiki/Representational_state_transfer">RESTful API</a> that can be used for creating new projects,
-                getting tasks, submitting contributions, etc. The API end point is available at:
+
+                <h1>{{brand}}: API Help</h1>
+                <p>
+                    {{brand}} has a <a href="http://en.wikipedia.org/wiki/Representational_state_transfer">RESTful API</a>
+                    that can be used for getting information about tasks, submitting contributions, etc.
+                    The API end point is available at:
                 </p>
                 <ul>
                     <li><a href="{{url_for('api.index')}}">{{url_for('api.index', _external=True)}}</a></li>
                 </ul>
-                <p>We recommend the employment of the <a href="http://pybossajs.readthedocs.org/en/latest/">PyBossa.JS</a> library to develop projects, as it abstracts the
-                low level API calls, providing a more simple and easy to use API. PyBossa.JS is available at the server for every project, but if you prefer to download it
-                you can do it from its official <a href="http://github.com/PyBossa/pybossa.js">repository</a>.</p>
-                <hr>
+
                 <h2>Projects API end point</h2>
-                <p>
-                For example, if you want to <strong>get a list of available projects</strong> on this server,
-                you can obtain them by opening the following URL:
-                </p>
+                <p>To get a list of available projects:</p>
                 <ul>
                     <li><a href="{{url_for('api.api_project')}}">{{url_for('api.api_project', _external=True)}}</a></li>
                 </ul>
-                <p>
-                <span class="label label-warning"><i class="fa fa-bullhorn"></i> Note</span>
-                GET actions are limited to only 20 items by default,
-                you can use <em>limit</em> and <em>offset</em> to tune the number of results.
-                For further information read the <a href="http://docs.pybossa.com/en/latest/api.html">documentation</a>.
-                </p>
-                <p>You can also do <strong>queries using the API</strong>. For example, search for a specific project:</p>
+                <p>To search for a specific project:</p>
                 <ul>
-                    <li><a href="{{url_for('api.api_project', short_name='flickrperson')}}">{{url_for('api.api_project', short_name='flickrperson', _external=True)}}</a></li>
+                    <li><a href="{{url_for('api.api_project', short_name='pinyincardcatalogue')}}">{{url_for('api.api_project', short_name='pinyincardcatalogue', _external=True)}}</a></li>
                 </ul>
-                <p>
-                For more information about the API please, see the <a href="http://docs.pybossa.com/en/latest/api.html">documentation</a> and the <a href="http://docs.pybossa.com/en/latest/user/tutorial.html">step by step tutorial</a> that explores the usage of the API.
-                </p>
                 <hr>
+
                 <h2>Tasks API end point</h2>
-                <p>
-                You can <strong>get a list of available tasks</strong> from the server
-                opening the following URL:
-                </p>
+                <p>To get a list of available tasks:</p>
                 <ul>
                     <li><a href="{{url_for('api.api_task')}}">{{url_for('api.api_task', _external=True)}}</a></li>
                 </ul>
-                <p>
-                <span class="label label-warning"><i class="fa fa-bullhorn"></i> Note</span>
-                GET actions are limited to only 20 items by default,
-                you can use <em>limit</em> and <em>offset</em> to tune the number of results.
-                For further information read the <a href="http://docs.pybossa.com/en/latest/api.html">documentation</a>.
-                </p>
-                <p>You can also do <strong>queries using the API</strong>. For example, get the tasks for a given project using the project id:</p>
+                <p>To get the tasks for a given project:</p>
                 <ul>
                     <li><a href="{{url_for('api.api_task', project_id=project_id)}}">{{url_for('api.api_task', project_id=project_id, _external=True)}}</a></li>
                 </ul>
-                <p>
-                Or for example <strong>get a list of completed tasks for a given project</strong> (i.e it could return an empty list because there are no tasks completed yet):
-                </p>
+                <p>Or, to get a list of completed tasks for a given project:</p>
                 <ul>
                     <li><a href="{{url_for('api.api_task', project_id=project_id, state='completed')}}">{{url_for('api.api_task', project_id=project_id,  state='completed', _external=True)}}</a></li>
                 </ul>
-                <p>
-                For more information about the API please, see the <a href="http://docs.pybossa.com/en/latest/api.html">documentation</a> and the <a href="http://docs.pybossa.com/en/latest/user/tutorial.html">step by step tutorial</a> that explores the usage of the API.
-                </p>
                 <hr>
+
                 <h2>Task Runs API end point</h2>
-                <p>
-                You can <strong>get a list of available task runs</strong> from the server
-                opening the following URL:
+                <p>To get a list of contributions:
                 </p>
                 <ul>
                     <li><a href="{{url_for('api.api_taskrun')}}">{{url_for('api.api_taskrun', _external=True)}}</a></li>
                 </ul>
-                <p>
-                <span class="label label-warning"><i class="fa fa-bullhorn"></i> Note</span>
-                GET actions are limited to only 20 items by default,
-                you can use <em>limit</em> and <em>offset</em> to tune the number of results.
-                For further information read the <a href="http://docs.pybossa.com/en/latest/api.html">documentation</a>.
-                </p>
-                <p>You can also do <strong>queries using the API</strong>. For example, get the contributions for a given task- for a given project using the project id:</p>
+                <p>To get the contributions for a given project:</p>
                 <ul>
                     <li><a href="{{url_for('api.api_taskrun', project_id=project_id)}}">{{url_for('api.api_taskrun', project_id=project_id, _external=True)}}</a></li>
                 </ul>
+                <hr>
                 <p>
-                For more information about the API please, see the <a href="http://docs.pybossa.com/en/latest/api.html">documentation</a> and the <a href="http://docs.pybossa.com/en/latest/user/tutorial.html">step by step tutorial</a> that explores the usage of the API.
+                    <strong>Note: </strong>GET actions are limited to only 20 items by default,
+                    you can use <em>limit</em> and <em>offset</em> to tune the number of results.
+                    For further information read the <a href="http://docs.pybossa.com/en/latest/api.html">documentation</a>.
                 </p>
-
+                <p>
+                    For more information about the API please, see the <a href="http://docs.pybossa.com/en/latest/api.html">PyBossa documentation</a> and the <a href="http://docs.pybossa.com/en/latest/user/tutorial.html">step by step tutorial</a>.
+                </p>
             </div>
         </div>
     </div>
