--- a/templates/_navbar.html
+++ b/templates/_navbar.html
@@ -76,7 +76,7 @@
                     <a href="{{ url_for('admin.index') }}"><i class="fa fa-cog"></i> Admin</a>
                 </li>
                 <li class="nav-link">
-                    <a href="{{ url_for('projects.new') }}"><i class="fa fa-plus"></i> New Project</a>
+                    <a href="{{ url_for('project.new') }}"><i class="fa fa-plus"></i> New Project</a>
                 </li>
                 <li class="nav-link">
                     <a href="{{ url_for('account.projects', name=current_user.name) }}"><i class="fa fa-folder-open"></i> Open Project</a>
