--- a/templates/_navbar.html
+++ b/templates/_navbar.html
@@ -11,98 +11,98 @@
             <a class="navbar-brand" href="{{ url_for('home.home') }}">
                 <img id="navbar-logo"
                 {% if not active_page == 'index' and not has_splash == 'true' %}
-                        src="{{url_for('static',filename='img/logo-dark-plain.png')}}"
+                    src="{{url_for('static',filename='img/logo-dark-plain.png')}}"
                 {% else %}
-                        src="{{url_for('static',filename='img/logo-white-plain.png')}}"
+                    src="{{url_for('static',filename='img/logo-white-plain.png')}}"
                 {% endif %} alt="{{brand}} logo" />
             </a>
 
         </div>
-    <div id="navbar" class="navbar-collapse collapse">
-        <ul class="nav navbar-nav">
-            <li class="nav-link {% if active_page == 'about' %} active{% endif %}">
-                <a href="{{ url_for('home.about')}}">About</a>
-            </li>
-            <li class="nav-link {% if active_page == 'projects' %} active{% endif %}">
-                <a href="{{ url_for('project.index') }}">Projects</a>
-            </li>
-            <li class="nav-link {% if active_page == 'statistics' %} active{% endif %}">
-                <a href="{{ url_for('stats.index')}}">Statistics</a>
-            </li>
 
-            <!-- Use pybossa-discourse plugin if available -->
-            {% if 'pybossa_discourse' in plugins %}
-            <li class="nav-link">
-                <a href="{{ url_for('discourse.index')}}">Community
+        <div id="navbar" class="navbar-collapse collapse">
+            <ul class="nav navbar-nav">
+                <li class="nav-link {% if active_page == 'about' %} active{% endif %}">
+                    <a href="{{ url_for('home.about')}}">About</a>
+                </li>
+                <li class="nav-link {% if active_page == 'projects' %} active{% endif %}">
+                    <a href="{{ url_for('project.index') }}">Projects</a>
+                </li>
 
-                {% if current_user.info.notification_count and current_user.info.notification_count > 0 %}
-                <span id="discourse-notifications" class="badge badge-danger">
-                    {{current_user.info.notification_count}}
-                </span>
-                {% else %}
-                <span id="discourse-notifications" class="badge badge-danger"></span>
+                <!-- Plugin dependent links -->
+                {% for p in plugins %}
+
+                    {% if p.name == 'libcrowds-stats' %}
+                    <li class="nav-link {% if active_page == 'statistics' %} active{% endif %}">
+                        <a href="{{ url_for('stats.index')}}">Statistics</a>
+                    </li>
+                    {% elif p.name == 'pybossa-discourse' %}
+                    <li class="nav-link">
+                        <a href="{{ url_for('discourse.index')}}">Community
+
+                        {% if current_user.info.notification_count and current_user.info.notification_count > 0 %}
+                        <span id="discourse-notifications" class="badge badge-danger">
+                            {{current_user.info.notification_count}}
+                        </span>
+                        {% else %}
+                        <span id="discourse-notifications" class="badge badge-danger"></span>
+                        {% endif %}
+
+                        </a>
+                    </li>
+                    {% elif p.name == 'libcrowds-data' %}
+                    <li class="nav-link {% if active_page == 'data' %} active{% endif %}">
+                        <a href="{{ url_for('data.index')}}">Data</a>
+                    </li>
                 {% endif %}
+            </ul>
 
-                </a>
-            </li>
+            <!-- Optional search form -->
+            {% include '_gcs_form.html' ignore missing %}
+
+            {% if current_user.is_authenticated() %}
+            <ul class="nav navbar-nav navbar-right">
+                <li class="nav-link">
+                    <a href="#" data-toggle="dropdown" class="dropdown-toggle">
+                        <i class="icon fa fa-user"></i> {{ current_user.name | truncate(10,true) }} <span class="caret"></span>
+                    </a>
+                    <ul class="dropdown-menu">
+                    <li class="nav-link">
+                        <a href="{{ url_for('account.profile', name=current_user.name) }}"><i class="fa fa-user"></i> Profile</a></li>
+                    <li class="nav-link">
+                        <a href="{{ url_for('account.update_profile', name=current_user.name) }}"><i class="fa fa-cog"></i> Settings</a></li>
+
+                    {% if current_user.admin %}
+                    <li class="divider" />
+                    <li class="nav-link">
+                        <a href="{{ url_for('admin.index') }}"><i class="fa fa-cog"></i> Admin</a>
+                    </li>
+                    <li class="nav-link">
+                        <a href="{{ url_for('project.new') }}"><i class="fa fa-plus"></i> New Project</a>
+                    </li>
+                    <li class="nav-link">
+                        <a href="{{ url_for('account.projects', name=current_user.name) }}"><i class="fa fa-folder-open"></i> Open Project</a>
+                    </li>
+                    {% endif %}
+
+                    <li class="divider"></li>
+
+                    <!-- Also sign out from Discourse, if plugin is available -->
+                    {% if 'pybossa-discourse' in plugins|join(',', attribute='name') %}
+                        <li class="nav-link">
+                            <a href="{{ url_for('discourse.signout') }}"><i class="fa fa-power-off"></i> Sign Out</a>
+                        </li>
+                        {% else %}
+                        <li class="nav-link">
+                            <a href="{{ url_for('account.signout') }}"><i class="fa fa-power-off"></i> Sign Out</a>
+                        </li>
+                    {% endif %}
+                  </ul>
+                </li>
+            </ul>
+            {% else %}
+            <ul class="nav navbar-nav navbar-right">
+                <li class="nav-link"><a href="{{ url_for('account.signin') }}">Sign in</a></li>
+            </ul>
             {% endif %}
-
-            <!-- Use the libcrowds-data-repo plugin, if available -->
-            {% if 'libcrowds_data_repo' in plugins %}
-            <li class="nav-link {% if active_page == 'data' %} active{% endif %}">
-                <a href="{{ url_for('data.index')}}">Data</a>
-            </li>
-            {% endif %}
-        </ul>
-
-        <!-- Optional search form -->
-        {% include '_gcs_form.html' ignore missing %}
-
-        {% if current_user.is_authenticated() %}
-        <ul class="nav navbar-nav navbar-right">
-            <li class="nav-link">
-                <a href="#" data-toggle="dropdown" class="dropdown-toggle">
-                    <i class="icon fa fa-user"></i> {{ current_user.name | truncate(10,true) }} <span class="caret"></span>
-                </a>
-                <ul class="dropdown-menu">
-                <li class="nav-link">
-                    <a href="{{ url_for('account.profile', name=current_user.name) }}"><i class="fa fa-user"></i> Profile</a></li>
-                <li class="nav-link">
-                    <a href="{{ url_for('account.update_profile', name=current_user.name) }}"><i class="fa fa-cog"></i> Settings</a></li>
-
-                {% if current_user.admin %}
-                <li class="divider" />
-                <li class="nav-link">
-                    <a href="{{ url_for('admin.index') }}"><i class="fa fa-cog"></i> Admin</a>
-                </li>
-                <li class="nav-link">
-                    <a href="{{ url_for('project.new') }}"><i class="fa fa-plus"></i> New Project</a>
-                </li>
-                <li class="nav-link">
-                    <a href="{{ url_for('account.projects', name=current_user.name) }}"><i class="fa fa-folder-open"></i> Open Project</a>
-                </li>
-                {% endif %}
-
-                <li class="divider"></li>
-
-                <!-- Also sign out from Discourse, if plugin is available -->
-                {% if 'pybossa_discourse' in plugins %}
-                <li class="nav-link">
-                    <a href="{{ url_for('discourse.signout') }}"><i class="fa fa-power-off"></i> Sign Out</a>
-                </li>
-                {% else %}
-                <li class="nav-link">
-                    <a href="{{ url_for('account.signout') }}"><i class="fa fa-power-off"></i> Sign Out</a>
-                </li>
-                {% endif %}
-
-              </ul>
-            </li>
-        </ul>
-        {% else %}
-        <ul class="nav navbar-nav navbar-right">
-            <li class="nav-link"><a href="{{ url_for('account.signin') }}">Sign in</a></li>
-        </ul>
-        {% endif %}
+        </div>
     </div>
-</div>
