--- a/templates/home/_about.html
+++ b/templates/home/_about.html
@@ -53,7 +53,8 @@
 			<h2>Technology</h2>
 			<p>
 				LibCrowds is built on top of <a href="http://docs.pybossa.com/"> PyBossa </a>, an open-source Python framework for the creation of
-			    crowdsourcing projects. {% if 'pybossa_discourse' in plugins %} The community forum is powered by <a href="https://www.discourse.org/">Discourse</a>.{% endif %}
+			    crowdsourcing projects. {% if 'pybossa-discourse' in plugins|join(', ', attribute='name') %}
+				The community forum is powered by <a href="https://www.discourse.org/">Discourse</a>.{% endif %}
 			</p>
 			<p>
 				The <a href="https://github.com/LibCrowds/libcrowds-pybossa-theme" target="_blank">LibCrowds theme</a>, as well as the
@@ -61,12 +62,14 @@
 			    on GitHub.
 			</p>
 			<p>
-				The plugins currently running on the system are:
-				{% for p in plugins %}
-					<!-- Plugins could be under the LibCrowds profile or any other, so the GitHub search URL is used -->
-					<!-- The convention is to name the plugin repository with hyphens in place of underscores -->
-					<a href="https://github.com/search?q={{ p | replace("_", "-")}}">{{ p | replace("_", "-")}}</a>
-				{% endfor %}
+				{% if plugins %}
+					The plugins currently running on the LibCrowds platform are:
+					<ul>
+					{% for p in plugins %}
+						<li><a href="{{ p.website }}">{{ p.name }}, {{ p.version }}</a>: {{ p.description }}</li>
+					{% endfor %}
+					</ul>
+				{% endif %}
 			</p>
 			<div class="col-sm-6 col-sm-offset-3 col-xs-12 padding-top-sm">
 				<div class="col-xs-4"><img src="{{url_for('static',filename='img/html-logo.png')}}" class="img-responsive web-badge" alt="HTML5 web badge"></div>
@@ -82,7 +85,7 @@
 		<div class="col-md-11 padding-top-xs padding-bottom-sm">
 			<h2>Contact information</h2>
 			<ul>
-				{% if 'pybossa_discourse' in plugins %}
+				{% if 'pybossa-discourse' in plugins|join(',', attribute='name') %}
 				<li>Visit the <a href="{{url_for('discourse.index')}}">LibCrowds Community</a> for more information or to report any issues.</li>
 				{% else %}
 				<li><a href="mailto:{{contact_email}}">Email us</a> for more information.</li>
