--- a/templates/projects/delete.html
+++ b/templates/projects/delete.html
@@ -5,28 +5,30 @@
 
 {% block content %}
 {% if project %}
-        {{ render_local_nav(current_user, 'admin', project.short_name) }}
-            <div class="container-padded">
-                <div class="container container-padded">
-                    <div class="row">
-                        <div class="col-sm-9 col-sm-offset-3">
-                          {% include "_flash_messages.html" %}
-                          <h1><strong>{{project.name}}</strong>: Delete project</h1>
-                          <div class="alert alert-danger">
-                              <strong>Warning!</strong> If you delete the project, it and its tasks will be gone forever!
-                          </div>
-                          <form role="form" method="post" action="{{ url_for('project.delete', short_name = project.short_name) }}">
-                          <fieldset>
-                              <input type="hidden" name="csrf_token" value="{{ csrf_token() }}" />
-                              <h3><strong>Are you sure you want to delete this project and all of its tasks?</strong></h3>
-                              <div class="pull-right" role="group">
-                                <input type="submit" class="btn btn-default" value="Yes, delete it"/>
-                                <a href="{{ url_for('project.tasks', short_name = project.short_name) }}" class="btn btn-danger">No, do not delete it!</a>
-                              </div>
-                        </div>
-                    </div>
+{{ render_local_nav(current_user, 'admin', project.short_name) }}
+<div class="container-padded">
+    <div class="container container-padded">
+        <div class="row">
+            <div class="col-sm-9 col-sm-offset-3">
+                {% include "_flash_messages.html" %}
+                <h1><strong>{{project.name}}</strong>: Delete project</h1>
+                <div class="alert alert-danger">
+                    <strong>Warning!</strong> If you delete the project, it and its tasks will be gone forever!
                 </div>
+                <form role="form" method="post" action="{{ url_for('project.delete', short_name = project.short_name) }}">
+                    <fieldset>
+                        <input type="hidden" name="csrf_token" value="{{ csrf_token() }}" />
+                    </fieldset>
+                    <h3><strong>Are you sure you want to delete this project and all of its tasks?</strong></h3>
+                    <div class="pull-right" role="group">
+                        <input type="submit" class="btn btn-default" value="Yes, delete it"/>
+                        <a href="{{ url_for('project.tasks', short_name = project.short_name) }}" class="btn btn-danger">No, do not delete it!</a>
+                    </div>
+                </form>
             </div>
+        </div>
+    </div>
+</div>
 {% else %}
   <div class="page-header padding-top container">
     <h1>Sorry! This project does not exist.</h1>
