--- a/templates/projects/importers/dropbox.html
+++ b/templates/projects/importers/dropbox.html
@@ -8,74 +8,76 @@
 {% block content %}
 {{ helper.render_loading(loading_text) }}
 <script type="text/javascript" src="https://www.dropbox.com/static/api/2/dropins.js" id="dropboxjs" data-project-key="{{ config.get('DROPBOX_project_KEY') }}"></script>
-        {{ render_local_nav(current_user, "tasks", project.short_name) }}
-            <div class="container-padded">
-                <div class="container container-padded">
-                    <div class="row">
-                        <div class="col-sm-9 col-sm-offset-3">
-                          {% include "_flash_messages.html" %}
-                            {{ helper.render_loading(loading_text) }}
-                            <h1><strong>{{project.name}}</strong>: Import tasks</h1>
-                            <hr>
-                              <h3>From Dropbox</h3>
-                               <div id="dropbox-chooser"></div>
-                               <br>
-                               {% if form %}
-                               <form method="post" action="{{ url_for(target, short_name=project.short_name) }}">
-                                   <fieldset>
-                                       {{ form.hidden_tag() }}
-                                       <p id="message" style="display: none;">You are about to import <span id="numFiles"></span> files.</p>
-                                       {{ form.files(style="display: none;") }}
-                                       <div class="pull-right" role="group">
-                                        <a href="{{ url_for('project.tasks', short_name=project.short_name) }}" class="btn btn-default">Cancel</a>
-                                           <input id="submit" type="submit" value="Import" class="btn btn-danger" />
-                                       </div>
-                                   </fieldset>
-                               </form>
-                               {% endif %}
-                          </div>
-                       </div>
-                    </div>
-                  </div>
-       <script>
-           $("#submit").off('click').on('click', function(){
-               $("#loading").show();
+{{ render_local_nav(current_user, "tasks", project.short_name) }}
+<div class="container-padded">
+    <div class="container container-padded">
+        <div class="row">
+            <div class="col-sm-9 col-sm-offset-3">
+                {% include "_flash_messages.html" %}
+                {{ helper.render_loading(loading_text) }}
+                <h1><strong>{{project.name}}</strong>: Import tasks</h1>
+                <hr>
+                <h3>From Dropbox</h3>
+                <div id="dropbox-chooser">
+
+                </div>
+                <br>
+                {% if form %}
+                <form method="post" action="{{ url_for(target, short_name=project.short_name) }}">
+                    <fieldset>
+                        {{ form.hidden_tag() }}
+                        <p id="message" style="display: none;">You are about to import <span id="numFiles"></span> files.</p>
+                        {{ form.files(style="display: none;") }}
+                        <div class="pull-right" role="group">
+                            <a href="{{ url_for('project.tasks', short_name=project.short_name) }}" class="btn btn-default">Cancel</a>
+                            <input id="submit" type="submit" value="Import" class="btn btn-danger" />
+                        </div>
+                    </fieldset>
+                </form>
+               {% endif %}
+            </div>
+        </div>
+    </div>
+</div>
+<script>
+   $("#submit").off('click').on('click', function(){
+       $("#loading").show();
+   });
+</script>
+<script type="text/javascript">
+(function() {
+   var options = {
+       // Required. Called when a user selects an item in the Chooser.
+       success: function(files) {
+           list = document.getElementById("files");
+           files.forEach(function(file, index){
+               var element = document.createElement("li");
+               var content = document.createTextNode(file.name);
+               var input = document.createElement('input');
+               input.id = "files-" + index;
+               input.type = "hidden";
+               input.value = JSON.stringify(file);
+               input.name = "files-" + index;
+               element.appendChild(input);
+               element.appendChild(content);
+               list.appendChild(element);
            });
-       </script>
-       <script type="text/javascript">
-       (function() {
-           var options = {
-               // Required. Called when a user selects an item in the Chooser.
-               success: function(files) {
-                   list = document.getElementById("files");
-                   files.forEach(function(file, index){
-                       var element = document.createElement("li");
-                       var content = document.createTextNode(file.name);
-                       var input = document.createElement('input');
-                       input.id = "files-" + index;
-                       input.type = "hidden";
-                       input.value = JSON.stringify(file);
-                       input.name = "files-" + index;
-                       element.appendChild(input);
-                       element.appendChild(content);
-                       list.appendChild(element);
-                   });
-                   totalFilesToImport = list.childElementCount;
-                   document.getElementById('numFiles').textContent = totalFilesToImport;
-                   document.getElementById('message').style.display = "";
-               },
-               // Optional. A value of false (default) limits selection to a single file, while
-               // true enables multiple file selection.
-               multiselect: true,
-               // Optional. This is a list of file extensions. If specified, the user will
-               // only be able to select files with these extensions. You may also specify
-               // file types, such as "video" or "images" in the list. For more information,
-               // see File types below. By default, all extensions are allowed.
-               // extensions: ['.pdf', '.doc', '.docx'],
-           };
-           var button = Dropbox.createChooseButton(options);
-           document.getElementById("dropbox-chooser").appendChild(button);
-           document.getElementById("dropbox-chooser").addClass("btn btn-info");
-       })();
-       </script>
-       {% endblock %}
+           totalFilesToImport = list.childElementCount;
+           document.getElementById('numFiles').textContent = totalFilesToImport;
+           document.getElementById('message').style.display = "";
+       },
+       // Optional. A value of false (default) limits selection to a single file, while
+       // true enables multiple file selection.
+       multiselect: true,
+       // Optional. This is a list of file extensions. If specified, the user will
+       // only be able to select files with these extensions. You may also specify
+       // file types, such as "video" or "images" in the list. For more information,
+       // see File types below. By default, all extensions are allowed.
+       // extensions: ['.pdf', '.doc', '.docx'],
+   };
+   var button = Dropbox.createChooseButton(options);
+   document.getElementById("dropbox-chooser").appendChild(button);
+   document.getElementById("dropbox-chooser").addClass("btn btn-info");
+})();
+</script>
+{% endblock %}
