--- a/templates/projects/publish.html
+++ b/templates/projects/publish.html
@@ -9,13 +9,17 @@
     <div class="container container-padded">
         <div class="row">
             <div class="col-sm-9 col-sm-offset-3">
-            {% if project %}
+                {% if project %}
                 <h1><strong>{{project.name}}</strong>: Publish the project</h1>
                 <div class="alert alert-danger">
                     <strong>Please read carefully!</strong>
-                    <p>You are about to publish your project. This CANNOT be undone! Once your project has been published,
-                    people will be able to contribute to it and answers will begin to be stored.</p>
-                    <p>That means that your project should be working properly, so please make sure it does!</p>
+                    <p>
+                        You are about to publish your project. This CANNOT be undone! Once your project has been published,
+                        people will be able to contribute to it and answers will begin to be stored.
+                    </p>
+                    <p>
+                        That means that your project should be working properly, so please make sure that it does!
+                    </p>
                 </div>
                 <form class="form-horizontal" method="post" action="{{ url_for('project.publish', short_name = project.short_name) }}">
                 <fieldset>
@@ -26,9 +30,9 @@
                         <a href="{{ url_for('project.settings', short_name = project.short_name) }}" class="btn btn-large btn-default">No, do not publish it!</a>
                     </div>
                 </div>
-            {% else %}
+                {% else %}
                 <h1>Sorry! This project does not exist.</h1>
-            {% endif %}
+                {% endif %}
             </div>
         </div>
     </div>
