--- a/templates/projects/tasks/gdocs-map.html
+++ b/templates/projects/tasks/gdocs-map.html
@@ -1,7 +1,8 @@
 <div class="well">
     <h2><i class="fa fa-globe"></i>Geo-coding</h2>
     <h3>Re-use the Urban Park tasks</h3>
-  <p><a href="{{url_for('project.import_task', short_name=project.short_name,
-      type='gdocs', template='map')}}" class="btn btn-inverse">Use the
-      Mapping tasks</a></p>
+    <p><a href="{{url_for('project.import_task', short_name=project.short_name,
+        type='gdocs', template='map')}}" class="btn btn-inverse">Use the
+        Mapping tasks</a>
+    </p>
 </div>
