Add missing {% endfor %}

--- a/templates/_navbar.html
+++ b/templates/_navbar.html
@@ -53,7 +53,8 @@
                     <li class="nav-link {% if active_page == 'data' %} active{% endif %}">
                         <a href="{{ url_for('data.index')}}">Data</a>
                     </li>
-                {% endif %}
+                    {% endif %}
+                {% endfor %}
             </ul>
 
             <!-- Optional search form -->
